--- a/app/includes/content_beside.html
+++ b/app/includes/content_beside.html
@@ -142,7 +142,7 @@
                             <td>684g</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>300lm</td>
                         </tr>
                         <tr>
