--- a/app/includes/content_candela.html
+++ b/app/includes/content_candela.html
@@ -140,7 +140,7 @@
                             <td>430g</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>0.3-13 lm</td>
                         </tr>
                         <tr>
