--- a/app/includes/content_desk.html
+++ b/app/includes/content_desk.html
@@ -134,7 +134,7 @@
                             <td>590g (стандартная), 650g (аккумуляторная)</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>260lm</td>
                         </tr>
                         <tr>
