--- a/app/includes/content_embedded.html
+++ b/app/includes/content_embedded.html
@@ -97,7 +97,7 @@
                             <td>120x120x55mm</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>400lm</td>
                         </tr>
                         <tr>
