--- a/app/includes/content_kids.html
+++ b/app/includes/content_kids.html
@@ -221,7 +221,7 @@
                             <td>1360g</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>1500lm ±10% @4000k</td>
                         </tr>
                         <tr>
