--- a/app/includes/content_luna.html
+++ b/app/includes/content_luna.html
@@ -193,55 +193,10 @@
                 <img src="../img/luna_bluetoth.jpg" alt="">
             </div>
         </section>
-        <section class="row luna_content_17">
-            <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
-                <div class="text">
-                    <h2>Создайте свое звездное небо</h2>
-                    <p>Версия Starry Lampshade осветит ваш потолок подобно звездному небу. Плафон создан по методу выдувного
-                        формования.</p>
-                </div>
-            </div>
-        </section>
-        <section class="row luna_content_16">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-md-offset-6 col-lg-6 col-lg-offset-6">
-                <div class="text">
-                    <h2>Озарите каждый уголок комнаты</h2>
-                    <p>Совершенно новая конструкция плафона удовлетворит любые запросы к освещению. Хорошо пропускающий свет
-                        акрил и изготовление поверхности по типу диапозитива позволили добиться мягкого, не режущего глаз
-                        света.</p>
-                </div>
-            </div>
-        </section>
-        <section class="row luna_content_15">
-            <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
-                <div class="text">
-                    <h2>Размеры для любых комнат</h2>
-                    <p>Лампа выпускается в нескольких размерах, что позволяет выбрать именно ту, которая наиболее эффективно
-                        сможет освещать ваше помещение</p>
-                </div>
-                <div class="row align-center">
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <img src="../img/luna-320.jpg" alt="">
-                        <h3>320×73mm / 32Вт</h3>
-                        <p>Для небольших гостинных и спален до&nbsp;20m²</p>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <img src="../img/luna-480.jpg" alt="">
-                        <h3>480×80mm / 32Вт</h3>
-                        <p>Для небольших гостинных и спален до&nbsp;20m²</p>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <img src="../img/luna-650.jpg" alt="">
-                        <h3>650×147mm / 50Вт</h3>
-                        <p>Для средних гостинных и спален до&nbsp;25m²</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <section class="row luna_content_14">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <img src="../img/luna_10.jpg" alt="">
-                <img src="../img/luna_12.jpg" alt="">
                 <table class="table">
                     <thead>
                         <tr>
@@ -255,18 +210,18 @@
                         </tr>
                         <tr>
                             <td>Цвет</td>
-                            <td>Белый</td>
+                            <td>Белый / Серый</td>
                         </tr>
                         <tr>
                             <td>Размеры</td>
-                            <td>320x320x73mm / 480x480x80mm / 650x650x147mm</td>
+                            <td>320x320x73mm</td>
                         </tr>
                         <tr>
                             <td>Вес</td>
                             <td>1360g</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>1800lm ±10% @4000k</td>
                         </tr>
                         <tr>
@@ -283,7 +238,7 @@
                         </tr>
                         <tr>
                             <td>Площадь освещения</td>
-                            <td>15m² / 20m² / 25m² </td>
+                            <td>15m²</td>
                         </tr>
                         <tr>
                             <td>Мощность</td>
