--- a/app/includes/content_msnl.html
+++ b/app/includes/content_msnl.html
@@ -124,7 +124,7 @@
                             <td>141g</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>0.7lm, 3.8lm</td>
                         </tr>
                         <tr>
