--- a/app/includes/content_muse.html
+++ b/app/includes/content_muse.html
@@ -210,7 +210,7 @@
                             <td>2250g</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>850lm</td>
                         </tr>
                         <tr>
