--- a/app/includes/content_nox-mini.html
+++ b/app/includes/content_nox-mini.html
@@ -78,7 +78,7 @@
                             <td>250x71mm</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>670lm</td>
                         </tr>
                         <tr>
