--- a/app/includes/content_nox-plus.html
+++ b/app/includes/content_nox-plus.html
@@ -218,7 +218,7 @@
                             <td>500x500x113mm</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>Регулируемый: 350lm-6500lm</td>
                         </tr>
                         <tr>
