--- a/app/includes/content_nox.html
+++ b/app/includes/content_nox.html
@@ -200,7 +200,7 @@
                             <td>960x640x113mm</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>Регулируемый: 700lm-6000lm</td>
                         </tr>
                         <tr>
