--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -16,6 +16,9 @@
                                 <a href="/kids/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Kids</a>
                             </li>
                             <li class="sub-menu-item">
+                                <a href="/galaxy/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Galaxy</a>
+                            </li>
+                            <li class="sub-menu-item">
                                 <a href="/nox-pro/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Pro</a>
                             </li>
                             <li class="sub-menu-item">
@@ -77,6 +80,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/kids/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Kids</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                    <a href="/galaxy/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Galaxy</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/nox-pro/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Pro</a>
