--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -25,15 +25,23 @@
             <img src="img/kids_thumbnail.jpg" alt="">
             <p>LED Ceiling Light (для детей)</p>
         </a>
+        <a href="/nox-plus/" class="product">
+            <img src="img/nox-plus_thumbnail.jpg" alt="">
+            <p>Crystal Ceiling Light Plus</p>
+        </a>
+        <a href="/nox-round/" class="product">
+            <img src="img/nox-round_thumbnail.jpg" alt="">
+            <p>Crystal Ceiling Light Round Diamond</p>
+        </a>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
         <a href="/desk/" class="product">
             <img src="img/desktop_thumbnail.jpg" alt="">
             <p>LED Smart Table Lamp — Умная настольная лампа</p>
         </a>
-        <a href="/luna/" class="product">
+        <a href="/galaxy/" class="product">
             <img src="img/luna_650_thumbnail.jpg" alt="">
-            <p>LED Ceiling Light — Светодиодный потолочный светильник</p>
+            <p>LED Ceiling Light Galaxy — Светодиодный потолочный светильник</p>
         </a>
         <a href="/beside/" class="product">
             <img src="img/beside_thumbnail.jpg" alt="">
@@ -45,10 +53,14 @@
         </a>
         <a href="/muse/" class="product">
             <img src="img/muse_thumbnail.jpg" alt="">
-            <p>Serene Eye-Friendly</p>
+            <p>Serene Eye-Friendly — Настольная лампа</p>
         </a>
         <a href="/nox-mini/" class="product">
             <img src="img/nox-mini_thumbnail.jpg" alt="">
-            <p>Crystal Ceiling Light Mini</p>
+            <p>Crystal Ceiling Light Mini — светильник с датчиком движения</p>
+        </a>
+        <a href="/embedded/" class="product">
+            <img src="img/embedded_thumbnail.jpg" alt="">
+            <p>Embedded Ceiling Light — Встраиваемый светильник</p>
         </a>
 </section>
