--- a/app/includes/content_nox-round.html
+++ b/app/includes/content_nox-round.html
@@ -156,7 +156,7 @@
                             <td>1.9 кг</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>Регулируемый: 350lm-6500lm</td>
                         </tr>
                         <tr>
