--- a/app/includes/content_table.html
+++ b/app/includes/content_table.html
@@ -185,7 +185,7 @@
                             <td>800g</td>
                         </tr>
                         <tr>
-                            <td>Светвой поток</td>
+                            <td>Световой поток</td>
                             <td>300lm</td>
                         </tr>
                         <tr>
