--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -31,6 +31,9 @@
                                 <a href="/nox-round/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Round</a>
                             </li>
                             <li class="sub-menu-item">
+                                <a href="/yilai-lotus/">Yilai&nbsp;Lotus&nbsp;Ceiling&nbsp;Light</a>
+                            </li>
+                            <li class="sub-menu-item">
                                 <a href="/embedded/">Ceiling&nbsp;Light&nbsp;Embedded</a>
                             </li>
                         </ul>
@@ -95,6 +98,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/nox-round/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Round</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/yilai-lotus/">Yilai&nbsp;Lotus&nbsp;Ceiling&nbsp;Light</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/embedded/">Ceiling&nbsp;Light&nbsp;Embedded</a>
