--- a/app/includes/content_pendant.html
+++ b/app/includes/content_pendant.html
@@ -1,81 +1,98 @@
-<div class="row yilai-lotus">
+<div class="row pendant">
     <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 content">
-        <section class="row yilai-lotus_content_1">
+
+        <section class="row pendant_content_1">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                 <div class="text">
-                    <h1>Yeelight Yilai Lotus Ceiling Light</h1>
+                    <h1>Yeelight Crystal Pendant Lamp</h1>
                     <h2>Интелектуальное освещение с&nbsp;натуральным светом</h2>
-                    <p>Регулируемая яркость и&nbsp;цветовая температура | Уникальный ажурный дизайн | Умное
-                        управление смартфоном</p>
+                    <p>Регулировка цветовой температуры и&nbsp;яркости| Голосовое управление | Атмосферный свет |
+                        Реалистичные цвета</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <img src="../img/lotus_01.png" alt="">
+                <img src="../img/pendant_01.png" alt="">
             </div>
         </section>
 
-        <section class="row yilai-lotus_content_2">
+        <section class="row pendant_content_2">
             <div class="col-xs-12 col-sm-12 col-md-6 col-md-push-6 col-lg-6 col-lg-push-6" style="padding: 0">
                 <div class="text">
-                    <h2>Простота в сочетании с&nbsp;натуральным светом</h2>
-                    <p>Простой дизайн светильника в сочетании с круглой формой и белым цветом корпуса, идеально
-                        вписывается в любой интерьер.</p>
-                    <p>За счет 72 качественных светодиодиодов в светильнике, Yilai Lotus достигает показателя
-                        цветопередачи Ra95, отражая истинные цвета предметов в помещении. Yilai Lotus поможет вам
-                        видить мир таким какой он есть на самом деле.</p>
+                    <h2>Соберите близких за&nbsp;столом с&nbsp;атмосферным светом</h2>
+                    <p>Подвесной светильник Yeelight серии Pendant отличается элегантным и утонченным дизайном,
+                        помогающим ему вписаться над любым столом и в любом интерьере.</p>
+                    <p>280 светодиодов с продуманным расположением испускают мягкий и равномерный свет. Особое световое
+                        кольцо создаст самую подходящую атмосферу для семейного или романтичного ужина.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6" style="padding: 0; font-size: 0;">
-                <img src="../img/lotus_05.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0; font-size: 0;">
+                <img src="../img/pendant_02.jpg" alt=""></div>
         </section>
 
-        <section class="row yilai-lotus_content_8">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
+
+        <section class="row pendant_content_3">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
-                    <h2>Несколько элементов управления</h2>
-                    <p>Yeelight Yilai Lotus Ceiling Light поддерживает несколько вариантов управления. Помимо традиционного
-                        настенного переключателя, в вашем распоряжении пульт Bluetooth и мобильное приложени Yeelight
-                        или Mi Home. Управлять светом стало легко. Синхронизируя ваш свет с помощью Google Assistant или
-                        Amazon Alexa, вы можете реализовать голосовое управление яркостью и цветовой температурой.</p>
-                    <ul class="function">
-                        <li>
-                            <span class="icon appcontrol"></span>
-                            <p>Приложение</p>
-                        </li>
-                        <li>
-                            <span class="icon swichcontrol"></span>
-                            <p>Выключатель</p>
-                        </li>
-                        <li>
-                            <span class="icon remotecontrol"></span>
-                            <p>Пульт</p>
-                        </li>
-                    </ul>
+                    <h2>280 светодиодов</h2>
+                    <p>Продуманная до мельчайших деталей конструкция содержит 280 светодиодов с линзами для максимальной
+                        светоотдачи. Для более эффективного освещения в корпусе так-же расположены пластины отражателя и
+                        рассеивателя.</p>
+                    <p>Для эффективного отвода тепла от лампы в корпусе предусмотрена радиаторная пластина. Благодаря
+                        этому заметно увеличивается срок службы Yeelight Pendant</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
-                    src="../img/nox_09.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/pendant_03.jpg" alt=""></div>
         </section>
 
-        <section class="row yilai-lotus_content_7">
+        <section class="row pendant_content_2">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-push-6 col-lg-6 col-lg-push-6" style="padding: 0">
+                <div class="text">
+                    <h2>Регулировка температуры и&nbsp;яркости</h2>
+                    <p>Регулировка температуры и яркости света позволяет подобрать оптимальное освещение под каждое
+                        застолье. Создайте теплую уютную атмосферу за столом, когда за окном зима, или добавьте немного
+                        ощущения прохлады в жаркий летний день!</p>
+                    <p>Восхитительный атмосферный цвет сделает каждый ужин отдельной церемонией. Будь то праздничный
+                        обед для большой семьи или романтичный ужин для двоих, правильное освещение создаст ту самую
+                        атмосферу, в которой можно насладиться и едой, и компанией.</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0; font-size: 0;">
+                <img src="../img/pendant_06.jpg" alt=""></div>
+        </section>
+
+        <section class="row pendant_content_4">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 align-center" style="padding: 0;">
+                <img src="../img/pendant_07.jpg" alt="">
+                <div class="text">
+                    <h2>Стильная обеденная зона</h2>
+                    <p>Светильник Yeelight Pendant выполнен в лучших традициях скандинавского минимализма. Его длина —
+                        90 см. Для того чтобы избавить лампу от лишних элементов и упростить ее монтаж, трансформатор
+                        питания встроен прямо в корпус. В скромных внешних чертах Yeelight Pendant воплощается широкая
+                        функциональность, создающая неповторимый образ.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="row pendant_content_7">
             <div class="col-xs-12 col-sm-6 col-sm-push-6 col-md-push-6 col-md-6 col-lg-6 col-lg-push-6"
-                style="padding: 0; font-size: 0;"><img src="../img/lotus_03.jpg" alt=""></div>
+                style="padding: 0; font-size: 0;"><img src="../img/pendant_08.gif" alt=""></div>
             <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
                 style="padding: 0">
                 <div class="text">
                     <h2>Защита от пыли и&nbsp;насекомых</h2>
-                    <p>Антимоскитный дизайн Yilai Lotus обеспечивает плотную герметизацию, а также предотвращает
+                    <p>Антимоскитный дизайн Yeelight Pendant обеспечивает плотную герметизацию, а также предотвращает
                         попадание пыли и насекомых внутрь лампы. Благодаря этому во время уборки вы можете забыть о
                         светильнике.</p>
                 </div>
             </div>
         </section>
 
-        
-
-        <section class="row nox-round_content_11">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <img src="/img/lotus_02.jpg" alt="">
+        <section class="row pendant_content_11">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <img src="/img/pendant_04.jpg" alt="">
                 <table class="table">
                     <thead>
                         <tr>
@@ -85,47 +102,47 @@
                     <tbody>
                         <tr>
                             <td>Модель</td>
-                            <td>YIXD07YI / YIXD06YI</td>
+                            <td>YLDL01YL</td>
                         </tr>
                         <tr>
                             <td>Цвет</td>
-                            <td>Белый</td>
+                            <td>белый</td>
                         </tr>
                         <tr>
                             <td>Размеры</td>
-                            <td>900x630x130mm (YIXD07YI) / 430×430×120mm (YIXD06YI)</td>
+                            <td>900×70×40 мм</td>
                         </tr>
                         <tr>
                             <td>Вес</td>
-                            <td>6.36 кг (YIXD07YI) / 1.72 кг (YIXD06YI)</td>
+                            <td>1.7 кг</td>
                         </tr>
                         <tr>
                             <td>Световой поток</td>
-                            <td>Регулируемый: 6000lm (YIXD07YI) / 1600lm (YIXD06YI)</td>
+                            <td>450-1700 lm</td>
                         </tr>
                         <tr>
                             <td>Цветовая температура</td>
-                            <td>Регулируемая: 2700K-6500K</td>
-                        </tr>
-                        <tr>
-                            <td>CRI</td>
-                            <td>>95</td>
-                        </tr>
-                        <tr>
-                            <td>Мощность</td>
-                            <td>110W (YIXD07YI) / 34W (YIXD06YI)</td>
-                        </tr>
-                        <tr>
-                            <td>Сеть</td>
-                            <td>Wi-Fi IEEE 802.11 b/g/n 2.4GHz</td>
-                        </tr>
-                        <tr>
-                            <td>Поддерживаемые платформы</td>
-                            <td>Android 4.4 и выше / IOS 8.0 и выше</td>
+                            <td>2700-6000К</td>
                         </tr>
                         <tr>
                             <td>Управление</td>
-                            <td>Голосовое, пульт, приложение</td>
+                            <td>смартфон, пульт, голос</td>
+                        </tr>
+                        <tr>
+                            <td>Wi-Fi</td>
+                            <td>802.11 b/g/n</td>
+                        </tr>
+                        <tr>
+                            <td>CRI</td>
+                            <td>95 Ra</td>
+                        </tr>
+                        <tr>
+                            <td>Мощность</td>
+                            <td>33 W</td>
+                        </tr>
+                        <tr>
+                            <td>Площадь освещения</td>
+                            <td>10-15 м²</td>
                         </tr>
                     </tbody>
                 </table>
