--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -33,6 +33,10 @@
             <img src="img/nox-round_thumbnail.jpg" alt="">
             <p>Crystal Ceiling Light Round Diamond</p>
         </a>
+        <a href="/yilai-lotus/" class="product">
+            <img src="img/lotus-round_thumbnail.jpg" alt="">
+            <p>Yilai Lotus Ceiling Light</p>
+        </a>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
         <a href="/desk/" class="product">
@@ -62,5 +66,9 @@
         <a href="/embedded/" class="product">
             <img src="img/embedded_thumbnail.jpg" alt="">
             <p>Embedded Ceiling Light — Встраиваемый светильник</p>
+        </a>
+        <a href="/pendant/" class="product">
+            <img src="img/pendant_thumbnail.jpg" alt="">
+            <p>Pendant Light — Подвесной светильник</p>
         </a>
 </section>
