--- a/app/less/main.less
+++ b/app/less/main.less
@@ -2380,6 +2380,106 @@ footer {
     }
 }
 
+.pendant{
+    margin-top: 80px;
+    &_content_1 {
+        margin: 0;
+        padding: 120px 0 80px;
+        background: linear-gradient(to bottom, #b9b9b9, #efefef);
+
+        img {
+            max-width: 100%;
+        }
+
+        @media(max-width: 768px) {
+            padding: 100px 0;
+            background: #d2d0d1;
+            background-size: cover;
+        }
+
+        .text {
+            padding: 0 0 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 0;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_2 {
+        margin: 0;
+
+        .text {
+            padding: 10% 5% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_3 {
+        margin: 0;
+
+        .text {
+            padding: 10% 5% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_4 {
+        margin: 0;
+        padding: 0 0 70px;
+        background: #5a7684;
+
+        .text {
+            width: 80%;
+            margin: 0 auto;
+            color: @light-text;
+
+            @media(max-width: 768px) {
+                width: 100%;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_7 {
+        margin: 0;
+        background: #6fc3be;
+
+        .text {
+            padding: 15% 10% 10%;
+            color: @light-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_11 {
+        margin: 0;
+
+        img {
+            display: block;
+            max-width: 70%;
+            margin: 20px auto;
+
+            @media(max-width: 768px) {
+                max-width: 90%;
+            }
+        }
+    }
+}
+
 .nox-mini {
     margin-top: 80px;
 
@@ -2924,8 +3024,6 @@ footer {
             }
         }
     }
-
-
 
     &_content_4 {
         margin: 0;
