--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -34,6 +34,9 @@
                                 <a href="/yilai-lotus/">Yilai&nbsp;Lotus&nbsp;Ceiling&nbsp;Light</a>
                             </li>
                             <li class="sub-menu-item">
+                                <a href="/pendant/">Yeelight&nbsp;Pendant</a>
+                            </li>
+                            <li class="sub-menu-item">
                                 <a href="/embedded/">Ceiling&nbsp;Light&nbsp;Embedded</a>
                             </li>
                         </ul>
@@ -85,7 +88,7 @@
                                 <a href="/kids/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Kids</a>
                             </li>
                             <li class="sub-menu-item">
-                                    <a href="/galaxy/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Galaxy</a>
+                                <a href="/galaxy/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Galaxy</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/nox-pro/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Pro</a>
@@ -101,6 +104,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/yilai-lotus/">Yilai&nbsp;Lotus&nbsp;Ceiling&nbsp;Light</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/pendant/">Yeelight&nbsp;Pendant</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/embedded/">Ceiling&nbsp;Light&nbsp;Embedded</a>
